packages/svelte/tests/validator/samples/store-rune-conflic-from-props/input.svelte
<script>
	let { state } = $props();
	let x = $state();
</script>

{$state}