packages/svelte/tests/compiler-errors/samples/runes-wrong-props-placement-instance/main.svelte
<script>
	function x() {
		const { a } = $props();
	}
</script>
